// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Artist Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1m58e9b"
    >
      <div
        class="content svelte-1m58e9b"
      >
        <span
          class="artwork svelte-1m58e9b"
        >
          <img
            alt="./avatar.jpg"
            class="h-full w-full svelte-hn7eai rounded-full"
            loading="lazy"
            src="./avatar.jpg#nonce=0.1"
          />
           
          
           
        </span>
         
        <p
          class="controls svelte-1m58e9b"
        >
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="open"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              open_in_full
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="play"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1m58e9b"
      >
        <h3
          class="svelte-1m58e9b"
        >
          Foo Fighters
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
          2 albums
        </h4>
      </header>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Artist No Albums 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1m58e9b"
    >
      <div
        class="content svelte-1m58e9b"
      >
        <span
          class="artwork svelte-1m58e9b"
        >
          <img
            alt="./avatar.jpg"
            class="h-full w-full svelte-hn7eai rounded-full"
            loading="lazy"
            src="./avatar.jpg#nonce=0.1"
          />
           
          
           
        </span>
         
        <p
          class="controls svelte-1m58e9b"
        >
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="open"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              open_in_full
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="play"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1m58e9b"
      >
        <h3
          class="svelte-1m58e9b"
        >
          Foo Fighters
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        />
      </header>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Artist Unknown 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1m58e9b"
    >
      <div
        class="content svelte-1m58e9b"
      >
        <span
          class="artwork svelte-1m58e9b"
        >
          <img
            class="h-full w-full svelte-hn7eai rounded-full hidden"
            loading="lazy"
          />
           
          <span
            class="h-full w-full svelte-hn7eai rounded-full"
          >
            <i
              class="material-icons svelte-hn7eai"
            >
              person
            </i>
          </span>
          
           
        </span>
         
        <p
          class="controls svelte-1m58e9b"
        >
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="open"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              open_in_full
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="play"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1m58e9b"
      >
        <h3
          class="svelte-1m58e9b"
        >
          Unknown
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
          2 albums
        </h4>
      </header>
    </span>
  </div>
</section>
`;
